--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@ XYZ(41.246,21.267,1.933)</pre></div>
 <a id="clcd-command-line-color-distance" class="anchor" href="#clcd-command-line-color-distance" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 <em>CLCD</em>: Command Line Color Distance</h5>
 
-<div class="highlight highlight-bash"><pre>clcd --cie94 <span class="pl-s1"><span class="pl-pds">"</span>RGB(1.0, 0.4, 1.0)<span class="pl-pds">"</span></span> <span class="pl-s1"><span class="pl-pds">"</span>RGB(1.0, 0.5, 1.0)<span class="pl-pds">"</span></span>
+<div class="highlight highlight-bash"><pre>$ clcd --cie94 <span class="pl-s1"><span class="pl-pds">"</span>RGB(1.0, 0.4, 1.0)<span class="pl-pds">"</span></span> <span class="pl-s1"><span class="pl-pds">"</span>RGB(1.0, 0.5, 1.0)<span class="pl-pds">"</span></span>
 4.79934</pre></div>
 
 <h5>
 <a id="clct-command-line-color-transform" class="anchor" href="#clct-command-line-color-transform" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 <em>CLCT</em>: Command Line Color Transform</h5>
 
-<div class="highlight highlight-bash"><pre><span class="pl-s3">echo</span> red <span class="pl-k">|</span> clct grey <span class="pl-k">|</span> clct <span class="pl-s1"><span class="pl-pds">"</span>to xyz<span class="pl-pds">"</span></span>
+<div class="highlight highlight-bash"><pre><span class="pl-s3">$ echo</span> red <span class="pl-k">|</span> clct grey <span class="pl-k">|</span> clct <span class="pl-s1"><span class="pl-pds">"</span>to xyz<span class="pl-pds">"</span></span>
 XYZ(20.214,21.267,23.156)</pre></div>
 
 <h2>
